--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Add to Cart</title>
+    <title>Reel Time</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Ultra&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
-      <img src="assets/cat.png" />
-      <input type="text" id="input-field" placeholder="Bread" />
-      <button id="add-button">Add to cart</button>
+      <h1>Reel Time</h1>
+      <div class="field">
+        <input type="text" id="input-field" placeholder="Pulp Fiction" />
+        <button id="add-button">+</button>
+      </div>
     </div>
-    <script src="index.js"></script>
+    <script src="functions.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
