Learn to transform a JavaScript Object to an array

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       </ul>
     </div>
     <script type="module" src="index.js"></script>
+    <script type="module" src="functions.js"></script>
   </body>
 </html>
