Learn to fetch data from our firebase

--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Add to Cart</title>
+    <title>Reel Time</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Martian+Mono:wght@500&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
-      <img src="assets/cat.png" />
-      <input type="text" id="input-field" placeholder="Bread" />
-      <button id="add-button">Add to cart</button>
-      <ul id="shopping-list">
-        <li>Oranges</li>
-        <li>Hot dogs</li>
-      </ul>
+      <h1>bestreads</h1>
+      <ul id="books"></ul>
     </div>
-    <script type="module" src="index.js"></script>
-    <script type="module" src="functions.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
