Change the title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <img src="assets/cat.png" />
       <input type="text" id="input-field" placeholder="Bread" />
-      <button id="add-button">Add to cart</button>
+      <button id="add-button">Kitten Cart</button>
       <ul id="shopping-list"></ul>
     </div>
     <script src="index.js" type="module"></script>
