Change the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add to Cart</title>
+    <title>Kitten Cart</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -33,7 +33,7 @@
     <div class="container">
       <img src="assets/cat.png" />
       <input type="text" id="input-field" placeholder="Bread" />
-      <button id="add-button">Kitten Cart</button>
+      <button id="add-button">Add to Cart</button>
       <ul id="shopping-list"></ul>
     </div>
     <script src="index.js" type="module"></script>
