--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </head>
   <body>
     <div class="container">
+      <h1 class="primary-heading">Hi, I'm Peach Cat</h1>
       <img src="assets/cat.png" />
       <input type="text" id="input-field" placeholder="Bread" />
       <button id="add-button">Add to Cart</button>
