Add an emoji to placeholder in input field

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <h1 class="primary-heading">Hi, I'm Peach Cat</h1>
       <img src="assets/cat.png" />
-      <input type="text" id="input-field" placeholder="Bread" />
+      <input type="text" id="input-field" placeholder="Bread 🍞" />
       <button id="add-button">Add to Cart</button>
       <ul id="shopping-list"></ul>
     </div>
